Fix spacing on about-page

--- a/HarrisonNiswanderPortfolio/src/pages/About/about_styles/about.scss
+++ b/HarrisonNiswanderPortfolio/src/pages/About/about_styles/about.scss
@@ -40,7 +40,7 @@ h1{
     justify-items: top;
     flex-direction: row;
     margin: 0;
-    gap: 6em;
+    gap: 0em;
     padding-bottom: 10em;
     padding-top: 1em;
     padding-left: 1em;
@@ -61,6 +61,7 @@ h1{
     justify-self: center;
     padding: 0.8em;
     margin: 0;
+
 }
 
 .pic-background{
@@ -71,13 +72,13 @@ h1{
     background-color: c.$black;
     margin-top: 0.8em;
     margin-bottom: 1em;
-    margin-left: 1.7em;
+    margin-left: 1.3em;
 
 }
 
 .button{
     //display: inline-block;
-    margin-left: 0.7em;
+    margin-left: 0.5em;
     margin-bottom: 0.5em;
     padding: 1em 2.5em;
     font-family: f.$title-font;
@@ -86,6 +87,7 @@ h1{
     color: c.$white;
     background-color: c.$brown;
     width:100%;
+    border-radius: 1em;
 }
 
 .button:hover{
@@ -117,7 +119,7 @@ h1{
     background-color: c.$light-yellow;
     padding: 1em;
     margin: 0;
-    width: 65em;
+    width: 60em;
     border-radius: 2em;
 
 }
